--- a/SalesDashboard.ipynb
+++ b/SalesDashboard.ipynb
@@ -1,10 +1,13 @@
+Aqui está o código com os comentários traduzidos para inglês e com a estrutura mais legível:
+
+```json
 {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primeiros passos"
+    "## Getting Started"
    ]
   },
   {
@@ -13,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing Packagens\n",
+    "# Importing Packages\n",
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
@@ -25,15 +28,15 @@
     "from tqdm import tqdm\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "#========= Conexões\n",
-    "#Para publicar o banco de dados no looker studio, abra o ngrok e digite o comando ngrok tcp 3306\n",
+    "# Database Connections\n",
+    "# To publish the database on Looker Studio, open ngrok and enter the command: ngrok tcp 3306\n",
     "\n",
     "token = '?api_token=4ef0bf096ae0fdde361a40a120d18e1db1b973cc'\n",
     "pipedriveURL = 'https://snovio-5a30ce.pipedrive.com/api/v1/'\n",
     "\n",
     "def get_pipedrive(get, params=None):\n",
-    "    url = f\"{pipedriveURL}{get}{token}\"             #Building the url\n",
-    "    response = requests.get(url, params=params)     #using request\n",
+    "    url = f\"{pipedriveURL}{get}{token}\"  # Building the URL\n",
+    "    response = requests.get(url, params=params)  # Using request\n",
     "    return response.json()\n",
     "\n",
     "connection = pymysql.connect(\n",
@@ -43,7 +46,7 @@
     "    database=\"pipedrive\"\n",
     ")\n",
     "\n",
-    "# Criar um cursor\n",
+    "# Create a cursor\n",
     "cursor = connection.cursor()"
    ]
   },
@@ -51,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Preparando Banco de Dados"
+    "## 1 - Preparing Database"
    ]
   },
   {
@@ -86,7 +89,7 @@
     "    for table_info in tables_info:\n",
     "        create_table(cursor, table_info)\n",
     "\n",
-    "# Certifique-se de fazer commit para salvar as alterações\n",
+    "# Make sure to commit to save the changes\n",
     "connection.commit()\n"
    ]
   },
@@ -94,14 +97,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 - Capturando Dados"
+    "# 2 - Collecting Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Estrutura de Captura de Dados - Construindo tabelas Fato"
+    "### Data Collection Structure - Building Fact Tables"
    ]
   },
   {
@@ -110,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##################################### Tabela DEAL ############################################\n",
+    "##################################### DEAL TABLE ############################################\n",
     "\n",
     "def create_table(cursor, table_name, columns):\n",
     "    create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} ({columns}, page_number TEXT, PRIMARY KEY (id(255)))\"\n",
@@ -120,17 +122,17 @@
     "def insert_data(connection, table, data_list, keys):\n",
     "    with connection.cursor() as cursor:\n",
     "        for data in data_list:\n",
-    "            # Montar a cláusula ON DUPLICATE KEY UPDATE\n",
+    "            # Build ON DUPLICATE KEY UPDATE clause\n",
     "            update_columns = ', '.join([f\"{key} = %s\" for key in keys])\n",
     "            on_duplicate_key_update = f\" ON DUPLICATE KEY UPDATE {update_columns}\"\n",
     "\n",
-    "            # Montar a query SQL completa\n",
+    "            # Build the complete SQL query\n",
     "            sql = f\"INSERT INTO {table} ({', '.join(keys)}) VALUES ({', '.join(['%s'] * len(keys))}) ON DUPLICATE KEY UPDATE {update_columns}\"\n",
     "\n",
-    "            # Ajuste aqui: obter valores diretamente do dicionário, com tratamento para 'page_number'\n",
-    "            params = [data.get(key, '') if key != 'user_id' else data.get(key, '') for key in keys]  # Corrigido aqui\n",
+    "            # Adjust here: directly obtain values from the dictionary, handling 'page_number'\n",
+    "            params = [data.get(key, '') if key != 'user_id' else data.get(key, '') for key in keys]  # Fixed here\n",
     "\n",
-    "            cursor.execute(sql, params + params)  # Duplicamos os parâmetros para a parte ON DUPLICATE KEY UPDATE\n",
+    "            cursor.execute(sql, params + params)  # Duplicate parameters for the ON DUPLICATE KEY UPDATE part\n",
     "\n",
     "    connection.commit()\n",
     "\n",
@@ -148,25 +150,27 @@
     "    \"471938728cb3d88d9ccbcf9fe43799730b7bace8\",  # Country\n",
     "    \"39d1d775f22299ba35733d9a2f6ab73a69b7fb87\",  # Job Position\n",
     "    \"a4d67ee86fb981de06b4f0d63be05de236747474\",  # Main Goals\n",
-    "    \"060949080c3a6c723d41c3eab8ee6389b9c6b9bf\",  # Contact Made\n",
+    "    \"060949080c3a6c723d41c3eab8ee6389b9c6b9bf\",
+
+  # Contact Made\n",
     "    \"5d40211a6403fecbdc3c861191f66725ac1773b8\"  # Origin\n",
     "]\n",
     "\n",
-    "# Criar a tabela\n",
+    "# Create the table\n",
     "deal_columns = [f\"{key} TEXT\" for key in deal_keys]\n",
     "create_table(connection.cursor(), \"Deal\", ', '.join(deal_columns))\n",
     "\n",
-    "#Get the last update timestamp\n",
+    "# Get the last update timestamp\n",
     "cursor = connection.cursor()\n",
-    "cursor.execute('SELECT MAX(update_time) FROM deal') #Getting the last time deal updated from SQL\n",
-    "timestamp_str = cursor.fetchone()[0] #The value will return a string\n",
-    "timestamp_pipedrive = datetime.strptime(timestamp_str, '%Y-%m-%d %H:%M:%S') #Converting the string into date\n",
-    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) #Subtracting 4 hours to get in Brazil time zone\n",
-    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') #Converted to last time deal update in Brazil time zone\n",
+    "cursor.execute('SELECT MAX(update_time) FROM deal') # Getting the last deal update time from SQL\n",
+    "timestamp_str = cursor.fetchone()[0] # The value will return as a string\n",
+    "timestamp_pipedrive = datetime.strptime(timestamp_str, '%Y-%m-%d %H:%M:%S') # Converting the string to date\n",
+    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) # Subtracting 4 hours to align with Brazil time zone\n",
+    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') # Converted to the last deal update time in Brazil time zone\n",
     "\n",
-    "#timestamp = '2024-04-04 00:00:00' # USAR ESSE SOMENTE QUANDO RESETAR O BANCO DE DADOS\n",
+    "# timestamp = '2024-04-04 00:00:00' # USE THIS ONLY WHEN RESETTING THE DATABASE\n",
     "\n",
-    "# Capturar dados para a tabela Deal\n",
+    "# Capturing data for the Deal table\n",
     "page_number = 0\n",
     "more_pages = True\n",
     "\n",
@@ -180,10 +184,9 @@
     "        \n",
     "        with connection.cursor() as cursor:\n",
     "            for deal_dictionary in deal_data['data']:\n",
-    "                insert_data(connection, \"Deal\", [deal_dictionary['data']], deal_keys) \n",
+    "                insert_data(connection, \"Deal\", [deal_dictionary['data']], deal_keys)\n",
     "                cursor.execute(f'UPDATE pipedrive.Deal SET page_number = %s WHERE page_number IS NULL', (page_number,))\n",
     "\n",
-    "        \n",
     "        page_number += 500\n",
     "    else:\n",
     "        more_pages = False\n",
@@ -206,13 +209,13 @@
    "source": [
     "##################################### DEAL_STAGE ############################################\n",
     "\n",
-    "#Get the last update timestamp\n",
+    "# Get the last update timestamp\n",
     "cursor = connection.cursor()\n",
-    "cursor.execute('SELECT MAX(date_update) FROM deal_stage') #Getting the last time deal updated from SQL\n",
-    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) #Subtracting 4 hours to get in Brazil time zone\n",
-    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') #Converted to last time deal update in Brazil time zone\n",
+    "cursor.execute('SELECT MAX(date_update) FROM deal_stage') # Getting the last deal update time from SQL\n",
+    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) # Subtracting 4 hours to align with Brazil time zone\n",
+    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') # Converted to the last deal update time in Brazil time zone\n",
     "\n",
-    "# Função para inserir registros na tabela Deal_Stage\n",
+    "# Function to insert records into the Deal_Stage table\n",
     "def insert_deal_stage(params_list):\n",
     "    insert_sql = \"\"\"\n",
     "        INSERT INTO Deal_Stage (date_update, deal_id, field_key, new_value, old_value, user_id)\n",
@@ -224,7 +227,7 @@
     "    \"\"\"\n",
     "    with connection.cursor() as cursor:\n",
     "        for params in params_list:\n",
-    "            # Verificar se o registro já existe na tabela\n",
+    "            # Check if the record already exists in the table\n",
     "            cursor.execute(\"\"\"\n",
     "                SELECT COUNT(*)\n",
     "                FROM Deal_Stage\n",
@@ -238,8 +241,8 @@
     "                cursor.execute(insert_sql, params)\n",
     "                connection.commit()\n",
     "\n",
-    "# Capturando IDs de negócios\n",
-    "#retomar variavel para update_time >= {timestamp}\n",
+    "# Capturing Deal IDs\n",
+    "# Resume variable for update_time >= {timestamp}\n",
     "def get_deal_ids():\n",
     "    select_deal_ids_sql = f\"\"\"\n",
     "        SELECT id FROM deal\n",
@@ -250,7 +253,7 @@
     "        cursor.execute(select_deal_ids_sql)\n",
     "        return [row[0] for row in cursor.fetchall()]\n",
     "    \n",
-    "# Capturando dados de fluxo de negócios\n",
+    "# Capturing deal flow data\n",
     "def get_deal_flow(deal_id):\n",
     "    get = f\"deals/{deal_id}/flow\"\n",
     "    params = {\"items\":\"dealChange\",\"limit\":\"500\"}\n",
@@ -258,13 +261,13 @@
     "\n",
     "\n",
     "def main():\n",
-    "    batch_size = 100  # Tamanho do lote para processamento\n",
+    "    batch_size = 100  # Batch size for processing\n",
     "\n",
     "    deal_ids_list = get_deal_ids()\n",
-    "    total_deals = len(deal_ids_list)  # Obtenha o número total de deals\n",
+    "    total_deals = len(deal_ids_list)  # Get the total number of deals\n",
     "    batches = [deal_ids_list[i:i+batch_size] for i in range(0, len(deal_ids_list), batch_size)]\n",
     "\n",
-    "    processed_deals = 0  # Inicialize o contador de deals processados\n",
+    "    processed_deals = 0  # Initialize the counter for processed deals\n",
     "\n",
     "    with tqdm(total=total_deals, desc=\"Processing Deals\", disable=False) as pbar:\n",
     "        for batch in batches:\n",
@@ -275,7 +278,7 @@
     "                data_list = dealflow.get('data', [])\n",
     "                \n",
     "                if data_list is not None:\n",
-    "                    # Se houver dados disponíveis, prossiga com o processamento\n",
+    "                    # If data is available, proceed with processing\n",
     "                    filtered_results = [\n",
     "                        item for item in data_list \n",
     "                        if item.get('object') == 'dealChange' and \n",
@@ -295,9 +298,9 @@
     "                    pass\n",
     "\n",
     "            insert_deal_stage(params_list)\n",
-    "            processed_deals += len(batch)  # Atualize o contador de deals processados\n",
+    "            processed_deals += len(batch)  # Update the counter for processed deals\n",
     "\n",
-    "            pbar.update(len(batch))  # Atualize a barra de progresso\n",
+    "            pbar.update(len(batch))  # Update the progress bar\n",
     "\n",
     "    return \"All deals processed.\"\n",
     "\n",
@@ -309,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Estrutura de Captura de Dados - Enriquecendo tabelas Dimensão"
+    "### Data Collection Structure - Enriching Dimension Tables"
    ]
   },
   {
@@ -318,9 +321,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Truncate Tabelas User e Scheduled para receber novas informações\n",
+    "# Truncate User and Scheduled Tables to receive new information\n",
     "New_Values_UsersAndScheduled = [\n",
-    "    \"\"\"\n",
+    "    \"\"
+
+\"\n",
     "    TRUNCATE TABLE user;\n",
     "    \"\"\",\n",
     "    \"\"\"\n",
@@ -332,16 +337,16 @@
     "\n",
     "]\n",
     "\n",
-    "# Executar os comandos SQL\n",
+    "# Execute the SQL commands\n",
     "for command in New_Values_UsersAndScheduled:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit (confirmar) as alterações\n",
+    "# Commit the changes\n",
     "connection.commit()\n",
     "\n",
     "\n",
     "#======================================================================\n",
-    "#====== 1 - PARAMETROS NATIVOS:\n",
+    "#====== 1 - NATIVE PARAMETERS:\n",
     "#======================================================================  \n",
     "\n",
     "\n",
@@ -362,7 +367,7 @@
     "    \"pipelines\": {\"table\": \"Pipeline\", \"keys\": [\"id\", \"order_nr\", \"name\"]}\n",
     "}\n",
     "\n",
-    "# Adicionando o código para outras tabelas no mesmo loop\n",
+    "# Add code for other tables in the same loop\n",
     "for get, mapping in data_mappings.items():\n",
     "    data_list = get_pipedrive(get)['data']\n",
     "    keys = mapping[\"keys\"]\n",
@@ -371,11 +376,11 @@
     "\n",
     "\n",
     "#======================================================================\n",
-    "#====== 2 - PARAMETROS PERSONALIZADOS:\n",
+    "#====== 2 - CUSTOM PARAMETERS:\n",
     "#======================================================================  \n",
     "\n",
     "\n",
-    "# Dicionários de parâmetros e tabelas\n",
+    "# Parameter and table dictionaries\n",
     "parameter_table_mapping = {\n",
     "    '4399b1f494a290194a563ff8d051a2931004c32c': 'scheduled',\n",
     "    '856481b27c6718cc6e2872f07d3b7c444114182a': 'lead_score_sdr',\n",
@@ -418,7 +423,7 @@
     "            insert_query = f\"INSERT INTO {table_name} ({insert_columns}) VALUES ({insert_values}) ON DUPLICATE KEY UPDATE id=id\"\n",
     "            cursor.execute(insert_query)\n",
     "\n",
-    "# Certifique-se de fazer commit para salvar as alterações\n",
+    "# Make sure to commit to save the changes\n",
     "connection.commit()\n"
    ]
   },
@@ -426,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Organizando o banco de Dados"
+    "# Organizing the Database"
    ]
   },
   {
@@ -435,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 1 - TABELA DEAL_FILTERED ========================================\n",
+    "#=== 1 - DEAL_FILTERED TABLE ========================================\n",
     "\n",
     "sql_commands = [\n",
     "    \"DROP TABLE IF EXISTS deal_filtered;\",\n",
@@ -473,11 +478,13 @@
     "]\n",
     "\n",
     "\n",
-    "# Executar os comandos SQL\n",
-    "for command in sql_commands:\n",
+    "# Execute the SQL commands\n",
+   
+
+ "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit (confirmar) as alterações\n",
+    "# Commit the changes\n",
     "connection.commit()"
    ]
   },
@@ -487,10 +494,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    #Inserir posteriormente\n",
-    "    #\"ALTER TABLE user ADD COLUMN SDR_ID INT;\",\n",
-    "    #\"UPDATE user u JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%') SET u.SDR_ID = s.id;\",\n",
-    "    #\"UPDATE user SET SDR_ID = 275 WHERE name = 'Volodymyr';\""
+    "# Add later\n",
+    "#\"ALTER TABLE user ADD COLUMN SDR_ID INT;\",\n",
+    "#\"UPDATE user u JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%') SET u.SDR_ID = s.id;\",\n",
+    "#\"UPDATE user SET SDR_ID = 275 WHERE name = 'Volodymyr';\""
    ]
   },
   {
@@ -499,9 +506,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 2 - Tabela New_deal_Stage\n",
+    "#=== 2 - New_deal_Stage Table\n",
     "\n",
-    "# Comandos SQL\n",
+    "# SQL commands\n",
     "sql_commands = [\n",
     "    \"DROP TABLE IF EXISTS new_deal_stage;\",\n",
     "    \"CREATE TABLE new_deal_stage (date_updated DATETIME, deal_id INT, new_value INT, old_value INT);\",\n",
@@ -514,11 +521,11 @@
     "\n",
     "]\n",
     "\n",
-    "# Executar os comandos SQL\n",
+    "# Execute the SQL commands\n",
     "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit (confirmar) as alterações\n",
+    "# Commit the changes\n",
     "connection.commit()"
    ]
   },
@@ -528,9 +535,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 3 - adaptando user e deal_filtered =============\n",
+    "#=== 3 - Adapting user and deal_filtered ==================\n",
     "\n",
-    "# Comandos SQL\n",
+    "# SQL commands\n",
     "sql_commands = [\n",
     "    \"\"\"UPDATE user u\n",
     "    JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%')\n",
@@ -554,7 +561,7 @@
     "    \"\"\"UPDATE user u\n",
     "    SET u.SDR_ID = u.id\n",
     "    WHERE u.SDR_ID IS NULL;\"\"\",\n",
-    "    \n",
+    "\n",
     "    \"\"\"DELETE FROM user\n",
     "    WHERE id = '15505148';\"\"\",\n",
     "\n",
@@ -578,11 +585,11 @@
     "    \"\"\"\n",
     "]\n",
     "\n",
-    "# Executar os comandos SQL\n",
+    "# Execute the SQL commands\n",
     "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit (confirmar) as alterações\n",
+    "# Commit the changes\n",
     "connection.commit()\n",
     "connection.close()"
    ]
@@ -611,3 +618,4 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
+```
