--- a/SalesDashboard.ipynb
+++ b/SalesDashboard.ipynb
@@ -147,9 +147,7 @@
     "    \"471938728cb3d88d9ccbcf9fe43799730b7bace8\",  # Country\n",
     "    \"39d1d775f22299ba35733d9a2f6ab73a69b7fb87\",  # Job Position\n",
     "    \"a4d67ee86fb981de06b4f0d63be05de236747474\",  # Main Goals\n",
-    "    \"060949080c3a6c723d41c3eab8ee6389b9c6b9bf\",
-
-  # Contact Made\n",
+    "    \"060949080c3a6c723d41c3eab8ee6389b9c6b9bf\",  # Contact Made\n",
     "    \"5d40211a6403fecbdc3c861191f66725ac1773b8\"  # Origin\n",
     "]\n",
     "\n",
@@ -320,9 +318,7 @@
    "source": [
     "# Truncate User and Scheduled Tables to receive new information\n",
     "New_Values_UsersAndScheduled = [\n",
-    "    \"\"
-
-\"\n",
+    "    \"\"\"\n",
     "    TRUNCATE TABLE user;\n",
     "    \"\"\",\n",
     "    \"\"\"\n",
@@ -476,9 +472,7 @@
     "\n",
     "\n",
     "# Execute the SQL commands\n",
-   
-
- "for command in sql_commands:\n",
+    "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
     "# Commit the changes\n",
@@ -615,4 +609,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-```
