--- a/SalesDashboard.ipynb
+++ b/SalesDashboard.ipynb
@@ -588,14 +588,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3",
    "language": "python",
    "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+    "language_info": {
+      "name": "python",
+      "version": "3.12.2",
+      "mimetype": "text/x-python",
+      "file_extension": ".py"
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
