--- a/SalesDashboard.ipynb
+++ b/SalesDashboard.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Started"
+    "## Primeiros passos"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing Packages\n",
+    "#Importing Packagens\n",
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
@@ -25,15 +25,15 @@
     "from tqdm import tqdm\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "# Database Connections\n",
-    "# To publish the database on Looker Studio, open ngrok and enter the command: ngrok tcp 3306\n",
+    "#========= Conexões\n",
+    "#Para publicar o banco de dados no looker studio, abra o ngrok e digite o comando ngrok tcp 3306\n",
     "\n",
     "token = '?api_token=4ef0bf096ae0fdde361a40a120d18e1db1b973cc'\n",
     "pipedriveURL = 'https://snovio-5a30ce.pipedrive.com/api/v1/'\n",
     "\n",
     "def get_pipedrive(get, params=None):\n",
-    "    url = f\"{pipedriveURL}{get}{token}\"  # Building the URL\n",
-    "    response = requests.get(url, params=params)  # Using request\n",
+    "    url = f\"{pipedriveURL}{get}{token}\"             #Building the url\n",
+    "    response = requests.get(url, params=params)     #using request\n",
     "    return response.json()\n",
     "\n",
     "connection = pymysql.connect(\n",
@@ -43,7 +43,7 @@
     "    database=\"pipedrive\"\n",
     ")\n",
     "\n",
-    "# Create a cursor\n",
+    "# Criar um cursor\n",
     "cursor = connection.cursor()"
    ]
   },
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Preparing Database"
+    "## 1 - Preparando Banco de Dados"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "    for table_info in tables_info:\n",
     "        create_table(cursor, table_info)\n",
     "\n",
-    "# Make sure to commit to save the changes\n",
+    "# Certifique-se de fazer commit para salvar as alterações\n",
     "connection.commit()\n"
    ]
   },
@@ -94,13 +94,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 - Collecting Data"
+    "# 2 - Capturando Dados"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Data Collection Structure - Building Fact Tables"
+    "### Estrutura de Captura de Dados - Construindo tabelas Fato"
    ]
   },
   {
@@ -109,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##################################### DEAL TABLE ############################################\n",
+    "##################################### Tabela DEAL ############################################\n",
     "\n",
     "def create_table(cursor, table_name, columns):\n",
     "    create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} ({columns}, page_number TEXT, PRIMARY KEY (id(255)))\"\n",
@@ -119,17 +120,17 @@
     "def insert_data(connection, table, data_list, keys):\n",
     "    with connection.cursor() as cursor:\n",
     "        for data in data_list:\n",
-    "            # Build ON DUPLICATE KEY UPDATE clause\n",
+    "            # Montar a cláusula ON DUPLICATE KEY UPDATE\n",
     "            update_columns = ', '.join([f\"{key} = %s\" for key in keys])\n",
     "            on_duplicate_key_update = f\" ON DUPLICATE KEY UPDATE {update_columns}\"\n",
     "\n",
-    "            # Build the complete SQL query\n",
+    "            # Montar a query SQL completa\n",
     "            sql = f\"INSERT INTO {table} ({', '.join(keys)}) VALUES ({', '.join(['%s'] * len(keys))}) ON DUPLICATE KEY UPDATE {update_columns}\"\n",
     "\n",
-    "            # Adjust here: directly obtain values from the dictionary, handling 'page_number'\n",
-    "            params = [data.get(key, '') if key != 'user_id' else data.get(key, '') for key in keys]  # Fixed here\n",
+    "            # Ajuste aqui: obter valores diretamente do dicionário, com tratamento para 'page_number'\n",
+    "            params = [data.get(key, '') if key != 'user_id' else data.get(key, '') for key in keys]  # Corrigido aqui\n",
     "\n",
-    "            cursor.execute(sql, params + params)  # Duplicate parameters for the ON DUPLICATE KEY UPDATE part\n",
+    "            cursor.execute(sql, params + params)  # Duplicamos os parâmetros para a parte ON DUPLICATE KEY UPDATE\n",
     "\n",
     "    connection.commit()\n",
     "\n",
@@ -151,21 +152,21 @@
     "    \"5d40211a6403fecbdc3c861191f66725ac1773b8\"  # Origin\n",
     "]\n",
     "\n",
-    "# Create the table\n",
+    "# Criar a tabela\n",
     "deal_columns = [f\"{key} TEXT\" for key in deal_keys]\n",
     "create_table(connection.cursor(), \"Deal\", ', '.join(deal_columns))\n",
     "\n",
-    "# Get the last update timestamp\n",
+    "#Get the last update timestamp\n",
     "cursor = connection.cursor()\n",
-    "cursor.execute('SELECT MAX(update_time) FROM deal') # Getting the last deal update time from SQL\n",
-    "timestamp_str = cursor.fetchone()[0] # The value will return as a string\n",
-    "timestamp_pipedrive = datetime.strptime(timestamp_str, '%Y-%m-%d %H:%M:%S') # Converting the string to date\n",
-    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) # Subtracting 4 hours to align with Brazil time zone\n",
-    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') # Converted to the last deal update time in Brazil time zone\n",
+    "cursor.execute('SELECT MAX(update_time) FROM deal') #Getting the last time deal updated from SQL\n",
+    "timestamp_str = cursor.fetchone()[0] #The value will return a string\n",
+    "timestamp_pipedrive = datetime.strptime(timestamp_str, '%Y-%m-%d %H:%M:%S') #Converting the string into date\n",
+    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) #Subtracting 4 hours to get in Brazil time zone\n",
+    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') #Converted to last time deal update in Brazil time zone\n",
     "\n",
-    "# timestamp = '2024-04-04 00:00:00' # USE THIS ONLY WHEN RESETTING THE DATABASE\n",
+    "#timestamp = '2024-04-04 00:00:00' # USAR ESSE SOMENTE QUANDO RESETAR O BANCO DE DADOS\n",
     "\n",
-    "# Capturing data for the Deal table\n",
+    "# Capturar dados para a tabela Deal\n",
     "page_number = 0\n",
     "more_pages = True\n",
     "\n",
@@ -179,9 +180,10 @@
     "        \n",
     "        with connection.cursor() as cursor:\n",
     "            for deal_dictionary in deal_data['data']:\n",
-    "                insert_data(connection, \"Deal\", [deal_dictionary['data']], deal_keys)\n",
+    "                insert_data(connection, \"Deal\", [deal_dictionary['data']], deal_keys) \n",
     "                cursor.execute(f'UPDATE pipedrive.Deal SET page_number = %s WHERE page_number IS NULL', (page_number,))\n",
     "\n",
+    "        \n",
     "        page_number += 500\n",
     "    else:\n",
     "        more_pages = False\n",
@@ -204,13 +206,13 @@
    "source": [
     "##################################### DEAL_STAGE ############################################\n",
     "\n",
-    "# Get the last update timestamp\n",
+    "#Get the last update timestamp\n",
     "cursor = connection.cursor()\n",
-    "cursor.execute('SELECT MAX(date_update) FROM deal_stage') # Getting the last deal update time from SQL\n",
-    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) # Subtracting 4 hours to align with Brazil time zone\n",
-    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') # Converted to the last deal update time in Brazil time zone\n",
+    "cursor.execute('SELECT MAX(date_update) FROM deal_stage') #Getting the last time deal updated from SQL\n",
+    "timestamp_subtracted = timestamp_pipedrive - timedelta(hours=4) #Subtracting 4 hours to get in Brazil time zone\n",
+    "timestamp = timestamp_subtracted.strftime('%Y-%m-%d %H:%M:%S') #Converted to last time deal update in Brazil time zone\n",
     "\n",
-    "# Function to insert records into the Deal_Stage table\n",
+    "# Função para inserir registros na tabela Deal_Stage\n",
     "def insert_deal_stage(params_list):\n",
     "    insert_sql = \"\"\"\n",
     "        INSERT INTO Deal_Stage (date_update, deal_id, field_key, new_value, old_value, user_id)\n",
@@ -222,7 +224,7 @@
     "    \"\"\"\n",
     "    with connection.cursor() as cursor:\n",
     "        for params in params_list:\n",
-    "            # Check if the record already exists in the table\n",
+    "            # Verificar se o registro já existe na tabela\n",
     "            cursor.execute(\"\"\"\n",
     "                SELECT COUNT(*)\n",
     "                FROM Deal_Stage\n",
@@ -236,8 +238,8 @@
     "                cursor.execute(insert_sql, params)\n",
     "                connection.commit()\n",
     "\n",
-    "# Capturing Deal IDs\n",
-    "# Resume variable for update_time >= {timestamp}\n",
+    "# Capturando IDs de negócios\n",
+    "#retomar variavel para update_time >= {timestamp}\n",
     "def get_deal_ids():\n",
     "    select_deal_ids_sql = f\"\"\"\n",
     "        SELECT id FROM deal\n",
@@ -248,7 +250,7 @@
     "        cursor.execute(select_deal_ids_sql)\n",
     "        return [row[0] for row in cursor.fetchall()]\n",
     "    \n",
-    "# Capturing deal flow data\n",
+    "# Capturando dados de fluxo de negócios\n",
     "def get_deal_flow(deal_id):\n",
     "    get = f\"deals/{deal_id}/flow\"\n",
     "    params = {\"items\":\"dealChange\",\"limit\":\"500\"}\n",
@@ -256,13 +258,13 @@
     "\n",
     "\n",
     "def main():\n",
-    "    batch_size = 100  # Batch size for processing\n",
+    "    batch_size = 100  # Tamanho do lote para processamento\n",
     "\n",
     "    deal_ids_list = get_deal_ids()\n",
-    "    total_deals = len(deal_ids_list)  # Get the total number of deals\n",
+    "    total_deals = len(deal_ids_list)  # Obtenha o número total de deals\n",
     "    batches = [deal_ids_list[i:i+batch_size] for i in range(0, len(deal_ids_list), batch_size)]\n",
     "\n",
-    "    processed_deals = 0  # Initialize the counter for processed deals\n",
+    "    processed_deals = 0  # Inicialize o contador de deals processados\n",
     "\n",
     "    with tqdm(total=total_deals, desc=\"Processing Deals\", disable=False) as pbar:\n",
     "        for batch in batches:\n",
@@ -273,7 +275,7 @@
     "                data_list = dealflow.get('data', [])\n",
     "                \n",
     "                if data_list is not None:\n",
-    "                    # If data is available, proceed with processing\n",
+    "                    # Se houver dados disponíveis, prossiga com o processamento\n",
     "                    filtered_results = [\n",
     "                        item for item in data_list \n",
     "                        if item.get('object') == 'dealChange' and \n",
@@ -293,9 +295,9 @@
     "                    pass\n",
     "\n",
     "            insert_deal_stage(params_list)\n",
-    "            processed_deals += len(batch)  # Update the counter for processed deals\n",
+    "            processed_deals += len(batch)  # Atualize o contador de deals processados\n",
     "\n",
-    "            pbar.update(len(batch))  # Update the progress bar\n",
+    "            pbar.update(len(batch))  # Atualize a barra de progresso\n",
     "\n",
     "    return \"All deals processed.\"\n",
     "\n",
@@ -307,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Collection Structure - Enriching Dimension Tables"
+    "###  Estrutura de Captura de Dados - Enriquecendo tabelas Dimensão"
    ]
   },
   {
@@ -316,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Truncate User and Scheduled Tables to receive new information\n",
+    "# Truncate Tabelas User e Scheduled para receber novas informações\n",
     "New_Values_UsersAndScheduled = [\n",
     "    \"\"\"\n",
     "    TRUNCATE TABLE user;\n",
@@ -330,16 +332,16 @@
     "\n",
     "]\n",
     "\n",
-    "# Execute the SQL commands\n",
+    "# Executar os comandos SQL\n",
     "for command in New_Values_UsersAndScheduled:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit the changes\n",
+    "# Commit (confirmar) as alterações\n",
     "connection.commit()\n",
     "\n",
     "\n",
     "#======================================================================\n",
-    "#====== 1 - NATIVE PARAMETERS:\n",
+    "#====== 1 - PARAMETROS NATIVOS:\n",
     "#======================================================================  \n",
     "\n",
     "\n",
@@ -360,7 +362,7 @@
     "    \"pipelines\": {\"table\": \"Pipeline\", \"keys\": [\"id\", \"order_nr\", \"name\"]}\n",
     "}\n",
     "\n",
-    "# Add code for other tables in the same loop\n",
+    "# Adicionando o código para outras tabelas no mesmo loop\n",
     "for get, mapping in data_mappings.items():\n",
     "    data_list = get_pipedrive(get)['data']\n",
     "    keys = mapping[\"keys\"]\n",
@@ -369,11 +371,11 @@
     "\n",
     "\n",
     "#======================================================================\n",
-    "#====== 2 - CUSTOM PARAMETERS:\n",
+    "#====== 2 - PARAMETROS PERSONALIZADOS:\n",
     "#======================================================================  \n",
     "\n",
     "\n",
-    "# Parameter and table dictionaries\n",
+    "# Dicionários de parâmetros e tabelas\n",
     "parameter_table_mapping = {\n",
     "    '4399b1f494a290194a563ff8d051a2931004c32c': 'scheduled',\n",
     "    '856481b27c6718cc6e2872f07d3b7c444114182a': 'lead_score_sdr',\n",
@@ -416,7 +418,7 @@
     "            insert_query = f\"INSERT INTO {table_name} ({insert_columns}) VALUES ({insert_values}) ON DUPLICATE KEY UPDATE id=id\"\n",
     "            cursor.execute(insert_query)\n",
     "\n",
-    "# Make sure to commit to save the changes\n",
+    "# Certifique-se de fazer commit para salvar as alterações\n",
     "connection.commit()\n"
    ]
   },
@@ -424,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Organizing the Database"
+    "# Organizando o banco de Dados"
    ]
   },
   {
@@ -433,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 1 - DEAL_FILTERED TABLE ========================================\n",
+    "#=== 1 - TABELA DEAL_FILTERED ========================================\n",
     "\n",
     "sql_commands = [\n",
     "    \"DROP TABLE IF EXISTS deal_filtered;\",\n",
@@ -471,11 +473,11 @@
     "]\n",
     "\n",
     "\n",
-    "# Execute the SQL commands\n",
+    "# Executar os comandos SQL\n",
     "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit the changes\n",
+    "# Commit (confirmar) as alterações\n",
     "connection.commit()"
    ]
   },
@@ -485,10 +487,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add later\n",
-    "#\"ALTER TABLE user ADD COLUMN SDR_ID INT;\",\n",
-    "#\"UPDATE user u JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%') SET u.SDR_ID = s.id;\",\n",
-    "#\"UPDATE user SET SDR_ID = 275 WHERE name = 'Volodymyr';\""
+    "    #Inserir posteriormente\n",
+    "    #\"ALTER TABLE user ADD COLUMN SDR_ID INT;\",\n",
+    "    #\"UPDATE user u JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%') SET u.SDR_ID = s.id;\",\n",
+    "    #\"UPDATE user SET SDR_ID = 275 WHERE name = 'Volodymyr';\""
    ]
   },
   {
@@ -497,9 +499,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 2 - New_deal_Stage Table\n",
+    "#=== 2 - Tabela New_deal_Stage\n",
     "\n",
-    "# SQL commands\n",
+    "# Comandos SQL\n",
     "sql_commands = [\n",
     "    \"DROP TABLE IF EXISTS new_deal_stage;\",\n",
     "    \"CREATE TABLE new_deal_stage (date_updated DATETIME, deal_id INT, new_value INT, old_value INT);\",\n",
@@ -512,11 +514,11 @@
     "\n",
     "]\n",
     "\n",
-    "# Execute the SQL commands\n",
+    "# Executar os comandos SQL\n",
     "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit the changes\n",
+    "# Commit (confirmar) as alterações\n",
     "connection.commit()"
    ]
   },
@@ -526,9 +528,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#=== 3 - Adapting user and deal_filtered ==================\n",
+    "#=== 3 - adaptando user e deal_filtered =============\n",
     "\n",
-    "# SQL commands\n",
+    "# Comandos SQL\n",
     "sql_commands = [\n",
     "    \"\"\"UPDATE user u\n",
     "    JOIN scheduled s ON u.name LIKE CONCAT('%', s.label, '%')\n",
@@ -552,7 +554,7 @@
     "    \"\"\"UPDATE user u\n",
     "    SET u.SDR_ID = u.id\n",
     "    WHERE u.SDR_ID IS NULL;\"\"\",\n",
-    "\n",
+    "    \n",
     "    \"\"\"DELETE FROM user\n",
     "    WHERE id = '15505148';\"\"\",\n",
     "\n",
@@ -576,11 +578,11 @@
     "    \"\"\"\n",
     "]\n",
     "\n",
-    "# Execute the SQL commands\n",
+    "# Executar os comandos SQL\n",
     "for command in sql_commands:\n",
     "    cursor.execute(command)\n",
     "\n",
-    "# Commit the changes\n",
+    "# Commit (confirmar) as alterações\n",
     "connection.commit()\n",
     "connection.close()"
    ]
@@ -588,16 +590,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
-    "language_info": {
-      "name": "python",
-      "version": "3.12.2",
-      "mimetype": "text/x-python",
-      "file_extension": ".py"
-   }
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
