--- a/SalesDashboard.ipynb
+++ b/SalesDashboard.ipynb
@@ -26,10 +26,9 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "#========= Conexões\n",
-    "#Para publicar o banco de dados no looker studio, abra o ngrok e digite o comando ngrok tcp 3306\n",
     "\n",
-    "token = '?api_token=4ef0bf096ae0fdde361a40a120d18e1db1b973cc'\n",
-    "pipedriveURL = 'https://snovio-5a30ce.pipedrive.com/api/v1/'\n",
+    "token = '?api_token=[api_pipedrive]'\n",
+    "pipedriveURL = 'https://[company].pipedrive.com/api/v1/'\n",
     "\n",
     "def get_pipedrive(get, params=None):\n",
     "    url = f\"{pipedriveURL}{get}{token}\"             #Building the url\n",
@@ -39,7 +38,7 @@
     "connection = pymysql.connect(\n",
     "    host=\"127.0.0.1\",\n",
     "    user=\"root\",\n",
-    "    password=\"shalazaki\",\n",
+    "    password=\"[insert password]\",\n",
     "    database=\"pipedrive\"\n",
     ")\n",
     "\n",
